syntax = "proto3";

package pb.v1;

option go_package = "github.com/byorty/enterprise-application/pkg/common/gen/pbv1";

import "patch/go.proto";
import "google/protobuf/timestamp.proto";
import "api/proto/v1/common.proto";

enum OrderStatus {
    ORDER_STATUS_UNSPECIFIED = 0 [(go.value) = {
        name: "OrderStatusUnspecified"}];
    ORDER_STATUS_CREATED = 1 [(go.value) = {
        name: "OrderStatusCreated"
    }];
    ORDER_STATUS_PAID = 2 [(go.value) = {
        name: "OrderStatusPaid"
    }];
    ORDER_STATUS_DELIVERED = 3 [(go.value) = {
        name: "OrderStatusDelivered"
    }];
}

message Order {
    string uuid = 1;
    string user_uuid = 2;
    double amount = 3;
    string address = 4;
    OrderStatus status = 5;
    repeated UserProduct products = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp delivered_at = 8;
}